Add post updating
Add created_at field to edit form
Fix feature tests
Make update post feature tests pass

--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -13,9 +13,15 @@
   .field
     = form.label :content
     = form.text_area :content
-  .field
-    = form.label :do_not_publish
-    = form.check_box :do_not_publish
+  - if form.object.new_record?
+    .field
+      = form.label :do_not_publish
+      = form.check_box :do_not_publish
+  - else
+    .field
+      = form.label :created_at
+      = form.date_select :created_at
+
 
   .actions
     = form.submit
