--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -12,6 +12,9 @@
 %p
   %strong User:
   = @post.user_id
+
+- if current_user == @post.user
+  = link_to 'Delete Post', @post, method: :delete, data: { confirm: 'Are you sure?' }
 = link_to 'Edit', edit_post_path(@post)
 |
 = link_to 'Back', posts_path
