--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -10,14 +10,15 @@
       %th{colspan: "3"}
   %tbody
     - @posts.each do |post|
-      %tr
-        %td= post.title
-        %td= post.content
-        %td= post.published
-        %td= post.user_id
-        %td= link_to 'Show', post
-        %td= link_to 'Edit', edit_post_path(post)
-        %td= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }
+      - cache post
+        %tr
+          %td= post.title
+          %td= post.content
+          %td= post.published
+          %td= post.user_id
+          %td= link_to 'Show', post
+          %td= link_to 'Edit', edit_post_path(post)
+          %td= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }
 %br/
 = link_to 'New Post', new_post_path
 
