--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -10,12 +10,16 @@
       %th{colspan: "3"}
   %tbody
     - @posts.each do |post|
-      - cache post
+      - cache post do
         %tr
           %td= post.title
           %td= post.content
           %td= post.published
-          %td= post.user_id
+          %td
+            = post.user.email
+            %br
+            Registration date:
+            = post.user.created_at.strftime("%F")
           %td= link_to 'Show', post
           %td= link_to 'Edit', edit_post_path(post)
           %td= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }
