--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -15,6 +15,12 @@
 
 - if current_user == @post.user
   = link_to 'Delete Post', @post, method: :delete, data: { confirm: 'Are you sure?' }
+
+.post-comments
+  = render @comments
+  - if user_signed_in?
+    = render partial: "comments/form", locals: { comment: @comment }
+
 = link_to 'Edit', edit_post_path(@post)
 |
 = link_to 'Back', posts_path
