Add tag cloud and tag page with posts
Fix tag tests
Add validations, associations for tags
Add routes

--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -1,18 +1,13 @@
 = form_with(model: post, local: true) do |form|
-  - if post.errors.any?
-    #error_explanation
-      %h2
-        = pluralize(post.errors.count, "error")
-        prohibited this post from being saved:
-      %ul
-        - post.errors.full_messages.each do |message|
-          %li= message
   .field
     = form.label :title
     = form.text_field :title
   .field
     = form.label :content
     = form.text_area :content
+  .field
+    = form.label :tags_string, "Tags"
+    = form.text_field :tags_string
   - if form.object.new_record?
     .field
       = form.label :do_not_publish
