--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -10,8 +10,11 @@
   %strong Created at:
   = @post.created_at
 %p
+  %strong Tags:
+  = @post.tags_string
+%p
   %strong User:
-  = @post.user_id
+  = @post.user.email
 
 - if current_user == @post.user
   = link_to 'Delete Post', @post, method: :delete, data: { confirm: 'Are you sure?' }
