--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,6 +1,18 @@
-- if user_signed_in?
-  = link_to 'My Posts', my_posts_path
-  = link_to 'Logout',   destroy_user_session_path, method: :delete
-- else
-  = link_to 'Sign Up',  new_user_registration_path
-  = link_to 'Login',    new_user_session_path
+%nav.navbar.navbar-expand-lg.navbar-light.bg-light.shadow.fixed-top
+  = link_to 'Blog', '/', class: 'navbar-brand'
+  #navbarNav.collapse.navbar-collapse.justify-content-end
+    %ul.navbar-nav.align-items-center
+      %li.nav-item.active
+        = link_to root_path do
+          Home
+          %span.sr-only (current)
+      - if user_signed_in?
+        %li.nav-item
+          = link_to 'My Posts', my_posts_path
+        %li.nav-item
+          = link_to 'Logout',   destroy_user_session_path, method: :delete
+      - else
+        %li.nav-item
+          = link_to 'Sign Up',  new_user_registration_path
+        %li.nav-item
+          = link_to 'Login',    new_user_session_path
