--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,6 +2,7 @@
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
+    %meta{:name => "viewport", :content => "width=device-width, initial-scale=1.0"}
     %title Blog
     = csrf_meta_tags
     = csp_meta_tag
@@ -9,5 +10,8 @@
     = javascript_pack_tag 'application'
   %body
     = render "layouts/navbar"
-    = render "layouts/flash_messages"
-    = yield
+    .container.mt-5
+      .row.main-section
+        .col-lg-12.mt-5
+          = render "layouts/flash_messages"
+          = yield
