--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,29 +1,1 @@
-%p#notice= notice
-%p
-  %strong Title:
-  = @post.title
-  = "(unpublished)" unless @post.published
-%p
-  %strong Content:
-  = @post.content
-%p
-  %strong Created at:
-  = @post.created_at
-%p
-  %strong Tags:
-  = @post.tags_string
-%p
-  %strong User:
-  = @post.user.email
-
-- if current_user == @post.user
-  = link_to 'Delete Post', @post, method: :delete, data: { confirm: 'Are you sure?' }
-
-.post-comments
-  = render @comments
-  - if user_signed_in?
-    = render partial: "comments/form", locals: { comment: @comment }
-
-= link_to 'Edit', edit_post_path(@post)
-|
-= link_to 'Back', posts_path
+= render partial: "post", locals: { post: @post }
