--- a/app/views/tags/_tag_cloud.html.haml
+++ b/app/views/tags/_tag_cloud.html.haml
@@ -1,3 +1,3 @@
-.tag-cloud
+.tag-cloud.d-flex.mt-5.mb-5
   - Tag.all.each do |t|
-    .tag-cloud-item{css: "font-size: #{calculate_tag_size(t)}px"}= link_to t.tag_name, posts_tag_path(t)
+    .tag-cloud-item.mr-2{style: "font-size: #{calculate_tag_size(t)}px"}= link_to t.tag_name, posts_tag_path(t)
