--- a/app/views/posts/_short_post.haml
+++ b/app/views/posts/_short_post.haml
@@ -1,5 +1,5 @@
 .card.rounded-0.shadow-sm.mt-4
-  = render partial: "post_header", locals: { post: post }
+  = render partial: "posts/post_header", locals: { post: post }
   .card-body
     %h2.card-title
       = post.title
